--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -85,7 +85,7 @@ aliases:
 # hitting 404 on in-flight requests. Combines all files from new and old
 # version inside the asset_path.
 #
-asset_path: /public/build
+# asset_path: /var/www/html/public/build
 
 # Configure rolling deploys by setting a wait time between batches of restarts.
 #
