--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -65,6 +65,9 @@ env:
     - DB_DATABASE
     - DB_USERNAME
     - DB_PASSWORD
+    - CLOUDFLARE_TOKEN
+    - CLOUDFLARE_ACCOUNT_ID
+    - CLOUDFLARE_ACCOUNT_HASH
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal app logs -r job" will tail logs from the first server in the job section.
 #
